QA-2224: Installer : Option wait for jahia startup http://jira.jahia.org/browse/QA-2224
Change wording for start tomcat and launch browser options

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@22 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
@@ -1,6 +1,6 @@
 afterInstall.description=Installation erfolgreich
-afterInstall.launchJahia=Auf Server-Start warten und Jahia starten
-afterInstall.startTomcat=Apache Tomcat Server starten
+afterInstall.launchJahia=Web-Browser starten wenn der Server gestartet ist
+afterInstall.startTomcat=Jahia Server starten
 afterInstall.title=Installation
 afterInstall.viewHowToInstall=Installationsanleitung öffnen
 afterInstall.viewReadme=README öffnen
