--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
@@ -1,6 +1,6 @@
 afterInstall.description=Installation successful
-afterInstall.launchJahia=Wait for server startup and launch Jahia
-afterInstall.startTomcat=Start Apache Tomcat server
+afterInstall.launchJahia=Launch a Web browser when the server is started
+afterInstall.startTomcat=Start Jahia server
 afterInstall.title=Installation
 afterInstall.viewHowToInstall=Open How To Install file
 afterInstall.viewReadme=Open README file
