--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -1,4 +1,5 @@
 afterInstall.description=Installation réussie
+afterInstall.startTomcat=
 afterInstall.title=Installation
 afterInstall.viewReadme=Ouvrez le fichier README
 common.requiredField=Champ obligatoire
