Installer: adjust uninstaller path; update copyright notice.
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@49 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
@@ -6,7 +6,7 @@ PacksPanel.info=Select the packs you want to install:
 PacksPanel.tip=Note: Grayed packs are required.
 PathInputPanel.noWhitespaces=Spaces are not allowed in the path.
 dbSettings.connection.error=An error occurred while establishing the connection to the database
-installer.madewith=Jahia Solutions Group SA
+installer.madewith=© 2002-2011 - Jahia Solutions Group SA
 installer.reversetitle=Installation of $APP_NAME
 jahia.cleanup=Cleanup
 jahia.configuring=Configuring Jahia (this can take some time):
