--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_es.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_es.properties
@@ -6,7 +6,7 @@ PacksPanel.info=Seleccione los paquetes que desea instalar:
 PacksPanel.tip=Nota: los paquetes en gris son obligatorios.
 PathInputPanel.noWhitespaces=No se permiten espacios en la ruta de instalación
 dbSettings.connection.error=
-installer.madewith=Jahia Solutions Group SA
+installer.madewith=© 2002-2011 - Jahia Solutions Group SA
 installer.reversetitle=Instalación de $APP_NAME
 jahia.cleanup=
 jahia.configuring=
