--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
@@ -6,7 +6,7 @@ PacksPanel.info=Bitte wählen Sie hier die Installationspakete aus:
 PacksPanel.tip=Hinweis: Die grau markierten Pakete können nicht optional ausgewählt werden.
 PathInputPanel.noWhitespaces=Der Pfad darf keine Leerzeihen enthalten.
 dbSettings.connection.error=Ein Fehler ist aufgetretten beim Herstellen der Verbindung zur Datenbank
-installer.madewith=Jahia Solutions Group SA
+installer.madewith=© 2002-2011 - Jahia Solutions Group SA
 installer.reversetitle=Installation von $APP_NAME
 jahia.cleanup=Cleanup
 jahia.configuring=Konfigurieren Jahia (kann einige Minuten dauern)
