--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
@@ -6,7 +6,7 @@ PacksPanel.info=Choisissez ici les modules à installer :
 PacksPanel.tip=Note : les modules grisés ne sont pas optionnels.
 PathInputPanel.noWhitespaces=Les espaces ne sont pas autorisés dans le chemin d'installation
 dbSettings.connection.error=Une erreur s'est produite durant la tentative de connexion à la base
-installer.madewith=Jahia Solutions Group SA
+installer.madewith=© 2002-2011 - Jahia Solutions Group SA
 installer.reversetitle=Installation de $APP_NAME
 jahia.cleanup=Nettoyage
 jahia.configuring=Configuration de Jahia en cours (ceci peut durer un certain temps):
