--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_it.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_it.properties
@@ -6,7 +6,7 @@ PacksPanel.info=Scegliere i componenti da installare:
 PacksPanel.tip=Nota: i componenti in grigio sono obbligatori.
 PathInputPanel.noWhitespaces=Non sono consentiti spazi nel percorso di installazione
 dbSettings.connection.error=
-installer.madewith=Jahia Solutions Group SA
+installer.madewith=© 2002-2011 - Jahia Solutions Group SA
 installer.reversetitle=Installazione di $APP_NAME
 jahia.cleanup=
 jahia.configuring=
