QA-2484: Installer texts http://jira.jahia.org/browse/QA-2484
Adjust installer texts

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@63 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
@@ -2,12 +2,12 @@ AntAction.pack=Ausführung von Konfigurationsaktionen
 CustomActions.progress=Konfigurationsfortschritt gesamt:
 CustomActions.tip=Konfigurationsfortschritt der Aktion:
 PacksPanel.dependencyList=Das Paket hat folgende Abhängigkeiten und/oder Ausschlüsse:
-PacksPanel.info=Bitte wählen Sie hier die Installationspakete aus:
+PacksPanel.info=Bitte wählen Sie hier den Installationstyp aus:
 PacksPanel.tip=Hinweis: Die grau markierten Pakete können nicht optional ausgewählt werden.
 PathInputPanel.noWhitespaces=Der Pfad darf keine Leerzeihen enthalten.
 dbSettings.connection.error=Ein Fehler ist aufgetretten beim Herstellen der Verbindung zur Datenbank
 installer.madewith=© 2002-2011 - Jahia Solutions Group SA
-installer.reversetitle=Installation von $APP_NAME
+installer.reversetitle=Jahia xCM Installation Wizard
 jahia.cleanup=Cleanup
 jahia.configuring=Konfigurieren Jahia (kann einige Minuten dauern)
 uninstaller.title=Deinstallation von Jahia xCM Community Edition
