--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_pt.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_pt.properties
@@ -6,5 +6,5 @@ PacksPanel.info=Seleccione os pacotes que deseja instalar:
 PacksPanel.tip=Nota: Os pacotes a cinza são necessários.
 PathInputPanel.noWhitespaces=Não são permitidos espaços no caminho de instalação
 installer.madewith=© 2002-2011 - Jahia Solutions Group SA
-installer.reversetitle=Instalação de $APP_NAME
+installer.reversetitle=
 uninstaller.title=Desinstalação de Jahia xCM Community Edition
