--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_fr.properties
@@ -1,8 +1,8 @@
-core = Plateforme Jahia xCM
-core.description = Plateforme Jahia incluant Gestion de contenu web, Portail, Gestion de documents and fonctions de recherche.
-docs = Documentation Jahia
-docs.description = Documentation Jahia. Veuillez noter que la documentation technique, particulièrement la JavaDoc est fréquemment mise à jour et améliorée. Nous vous recommandons de consulter la documentation en ligne afin de bénéficier des versions les plus à jour.
-juch = Jahia Unified Content Hub
-juch.description = Le composant "Jahia United Content Hub" étend les capacités de Gestion documentaire de Jahia en permettant aux utilisateurs de se connecter à des serveurs documentaires externes tels qu'Alfresco, Microsoft Sharepoint ou Oracle UCM.
-tomcat = Apache Tomcat
-tomcat.description = Le moteur de servlet Apache Tomcat 6.0.32. Ce choix permet de déployer et démarrer Jahia juste après la fin de l'assistant d'installation.
+core=Jahia xCM + Jahia Composite Content Platform
+core.description=Suite logicielle Jahia (application seule) incluant Jahia xCM, Jahia Composite Content Platform, nos JahiApps et le Jahia Studio.
+docs=Documentation Jahia
+docs.description=Documentation Jahia. Veuillez noter que la documentation technique, particulièrement la JavaDoc est fréquemment mise à jour et améliorée. Nous vous recommandons de consulter la documentation en ligne afin de bénéficier des versions les plus à jour.
+juch=Jahia Unified Content Hub
+juch.description=Le composant "Jahia United Content Hub" étend les capacités de Gestion documentaire de Jahia en permettant aux utilisateurs de se connecter à des serveurs documentaires externes tels qu'Alfresco, Microsoft Sharepoint ou Oracle UCM.
+tomcat=Ajouter Apache Tomcat - répertoire d'installation complet
+tomcat.description=Désélectionner cette option afin de générer un  package ne contenant que l'application seule destinée à Apache Tomcat. En cochant cette option, vous obtiendrez un répertoire d'installation complet (incluant Apache Tomcat) et pourrez démarrer votre instance de la suite logicielle Jahia immédiatement après la fin de cette assistant d'installation.
