--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_es.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_es.properties
@@ -6,5 +6,5 @@ PacksPanel.info=Seleccione los paquetes que desea instalar:
 PacksPanel.tip=Nota: los paquetes en gris son obligatorios.
 PathInputPanel.noWhitespaces=No se permiten espacios en la ruta de instalación
 installer.madewith=© 2002-2011 - Jahia Solutions Group SA
-installer.reversetitle=Instalación de $APP_NAME
+installer.reversetitle=
 uninstaller.title=Desinstalación de Jahia xCM Community Edition
