--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
@@ -2,12 +2,12 @@ AntAction.pack=Traitement des actions Ant
 CustomActions.progress=Progression de la configuration globale :
 CustomActions.tip=La configuration est en cours d'exécution
 PacksPanel.dependencyList=Les modules selectionnés nécessitent également les suivants :
-PacksPanel.info=Choisissez ici les modules à installer :
+PacksPanel.info=Choisissez le type d'installation que vous souhaitez mettre en oeuvre :
 PacksPanel.tip=Note : les modules grisés ne sont pas optionnels.
 PathInputPanel.noWhitespaces=Les espaces ne sont pas autorisés dans le chemin d'installation
 dbSettings.connection.error=Une erreur s'est produite durant la tentative de connexion à la base
 installer.madewith=© 2002-2011 - Jahia Solutions Group SA
-installer.reversetitle=Installation de $APP_NAME
+installer.reversetitle=Assistant d'installation de Jahia xCM
 jahia.cleanup=Nettoyage
 jahia.configuring=Configuration de Jahia en cours (ceci peut durer un certain temps):
 uninstaller.title=Désinstallation de Jahia xCM Community Edition
