--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_de.properties
@@ -1,6 +1,6 @@
-core=Jahia xCM Platform
-core.description=Jahia Plattform-Runtime einschließlich WCM, Portal, DM (Dokumenten Management) / DAM (Digital Asset Management) und Suchfunktionen.
+core=Jahia xCM + Jahia Composite Content Platform
+core.description=Jahia Software Suite (nur Anwendungspaket) einschließlich Jahia xCM, Jahia Composite Content Platform, unsere JahiApps und Jahia Studio.
 docs=TODO: Jahia Dokumentation
 juch=TODO: Jahia Unified Content Hub
-tomcat=Apache Tomcat
-tomcat.description=Der Apache Tomcat 6.0.32 Servlet Container für Jahia Deployment. In diesem Fall können Sie Jahia gleich nach der Installation starten.
+tomcat=Apache Tomcat - komplettes Installationsverzeichnis erzeugen
+tomcat.description=Deaktivieren Sie diese Option, um ein eigenständiges Anwendungspaket für den Apache Tomcat zu erzeugen. Wenn diese Option aktiviert ist, wird eine vollständige Installation gemacht (Apache Tomcat wird auch mitinstalliert). Ihre persönliche Jahia Software-Suite kann direkt nach der Fertigstellung dieses Installationsassistenten gestartet werden.
