Added missing French translations for the installer
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@73 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -1,6 +1,27 @@
 afterInstall.description=Installation réussie
+afterInstall.launchJahia=Lancer un navigateur après le démarrage de Jahia
+afterInstall.startTomcat=Démarrer le seveur Jahia
 afterInstall.title=Installation
+afterInstall.viewHowToInstall=Ouvrez le fichier d'aide à l'installation
 afterInstall.viewReadme=Ouvrez le fichier README
+appServer.ajpPort=port de connexion AJP (*)
+appServer.ajpPort.validator=Le port de connexion AJP est obligatoire et doit comporter un port TCP valide
+appServer.contextName=Nom du contexte (sans contexte /)
+appServer.contextName.validator=Le nom du contexte doit etre alphanumérique, sans espace et sans le / au début
+appServer.developmentMode=Utiliser le mode de développement pour les templates ?
+appServer.httpPort=Port de connexion HTTP (*)
+appServer.httpPort.validator=Le port de connexion HTTP est obligatoire et doit comporter un port TCP valide
+appServer.password=Mot de passe de l'outil d'administration Jahia (*)
+appServer.password.mandatory=Le mot de passe de l'outil d'administration Jahia est obligatoire
+appServer.serverPort=Port de l'arrêt du serveur (*)
+appServer.serverPort.validator=Le port de l'arrêt du serveur est obligatoire et doit comporter un port TCP valide
+appServer.sslPort=Port de redirection HTTPS (*)
+appServer.sslPort.validator=Le port de redirection HTTPS est obligatoire et doit comporter un port TCP valide
+appServer.title=Application et paramètres du serveur
+appServer.tomcat.description=Configuration Apache Tomcat
+appServer.username=Nom d'utilisateur de l'outil d'administration Jahia (*)
+appServer.username.mandatory=Le nom d'utilisateur de l'outil d'administration Jahia est obligatoire
+appServer.webApp.description=Paramètre de l'applcation Web
 common.requiredField=Champ obligatoire
 common.requiredFieldHint=(*) - champ obligatoire
 dbSettings.chooseMode=Mode de stockage en base préféré
