--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -11,17 +11,17 @@ appServer.contextName.validator=Le nom du contexte doit etre alphanumérique, san
 appServer.developmentMode=Utiliser le mode de développement pour les templates ?
 appServer.httpPort=Port de connexion HTTP (*)
 appServer.httpPort.validator=Le port de connexion HTTP est obligatoire et doit comporter un port TCP valide
-appServer.password=Mot de passe de l'outil d'administration Jahia (*)
-appServer.password.mandatory=Le mot de passe de l'outil d'administration Jahia est obligatoire
+appServer.password=Mot de passe de l'outil d'admin Jahia (*)
+appServer.password.mandatory=Le mot de passe de l'outil d'admin Jahia est obligatoire
 appServer.serverPort=Port de l'arrêt du serveur (*)
 appServer.serverPort.validator=Le port de l'arrêt du serveur est obligatoire et doit comporter un port TCP valide
 appServer.sslPort=Port de redirection HTTPS (*)
 appServer.sslPort.validator=Le port de redirection HTTPS est obligatoire et doit comporter un port TCP valide
 appServer.title=Application et paramètres du serveur
 appServer.tomcat.description=Configuration Apache Tomcat
-appServer.username=Nom d'utilisateur de l'outil d'administration Jahia (*)
-appServer.username.mandatory=Le nom d'utilisateur de l'outil d'administration Jahia est obligatoire
-appServer.webApp.description=Paramètre de l'applcation Web
+appServer.username=Nom d'utilisateur de l'outil d'admin Jahia (*)
+appServer.username.mandatory=Le nom d'utilisateur de l'outil d'admin Jahia est obligatoire
+appServer.webApp.description=Paramètre de l'application Web
 common.requiredField=Champ obligatoire
 common.requiredFieldHint=(*) - champ obligatoire
 dbSettings.chooseMode=Mode de stockage en base préféré
