BACKLOG-1708 Committed missing resources bundles for Jahia Pack installer
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@111 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
@@ -38,6 +38,10 @@ dbSettings.dbms.type.postgresql=PostgreSQL 8.x/9.x
 dbSettings.mode.embedded=Embedded Sun Java DB / Apache Derby database engine
 dbSettings.mode.standalone=Standalone DBMS
 dbSettings.title=Database connection settings
+externalizedConfig.title=Externalized configuration (optional)
+externalizedConfig.activate=Externalize configuration
+externalizedConfig.path=Configuration path
+externalizedConfig.description=Jahia supports externalized configurations stored in JAR files. This is optional and deactivated by default. The generated JAR file must then be in the server's classpath, so either in WEB-INF/lib or configured at the server level.
 installation.title=Installation type
 installation.type.advanced=Custom install (advanced)
 installation.type.express=Express install
