--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -38,6 +38,10 @@ dbSettings.dbms.type.postgresql=PostgreSQL 8.x/9.x
 dbSettings.mode.embedded=Base embarquée Sun Java DB / Apache Derby
 dbSettings.mode.standalone=SGBD autonome
 dbSettings.title=Configuration SGBD
+externalizedConfig.title=Configuration externalisée
+externalizedConfig.activate=Externalisation activée
+externalizedConfig.path=Répertoire de stockage
+externalizedConfig.description=Jahia offre la possibilité de stocker la configuration dans un fichier JAR. Ceci est optionel et désactivé par défaut. Le JAR doit être positionné dans le classpath du serveur d'application, donc par exemple dans WEB-INF/lib de l'applicatif Jahia ou dans les options du serveur.
 installation.title=Type d'installation
 installation.type.advanced=Installation personnalisée (avancée)
 installation.type.express=Installation rapide
