BACKLOG-1763 Backport all EE installer changes back into Pack
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@118 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
@@ -11,3 +11,16 @@ installer.reversetitle=Jahia xCM Installation Wizard
 jahia.cleanup=Cleanup
 jahia.configuring=Configuring Jahia (this can take some time):
 uninstaller.title=Uninstallation of Jahia xCM Community Edition
+UserInputPanel.headline.afterInstall=Installation
+UserInputPanel.headline.appServer=Application and server settings
+UserInputPanel.headline.cluster=Cluster configuration
+UserInputPanel.headline.dbMode=Database connection settings
+UserInputPanel.headline.dbType=Database connection settings
+UserInputPanel.headline.dbSettings=Database connection settings
+UserInputPanel.headline.externalizedConfig=Externalized configuration (optional)
+UserInputPanel.headline.installType=Installation type
+UserInputPanel.headline.ldap=LDAP provider configuration
+UserInputPanel.headline.mailSettings=Mail settings (optional)
+UserInputPanel.headline.operatingMode=Jahia operating mode
+UserInputPanel.headline.serverType=Server type
+UserInputPanel.headline.superUser=System administrator (root) settings
