--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
@@ -11,3 +11,16 @@ installer.reversetitle=Assistant d'installation de Jahia xCM
 jahia.cleanup=Nettoyage
 jahia.configuring=Configuration de Jahia en cours (ceci peut durer un certain temps):
 uninstaller.title=Désinstallation de Jahia xCM Community Edition
+UserInputPanel.headline.afterInstall=Installation
+UserInputPanel.headline.appServer=Application et paramètres du serveur
+UserInputPanel.headline.cluster=Configuration du cluster
+UserInputPanel.headline.dbMode=Configuration SGBD
+UserInputPanel.headline.dbType=Configuration SGBD
+UserInputPanel.headline.dbSettings=Configuration SGBD
+UserInputPanel.headline.externalizedConfig=Configuration externalisée (optionnelle)
+UserInputPanel.headline.installType=Type d'installation
+UserInputPanel.headline.ldap=Configuration LDAP
+UserInputPanel.headline.mailSettings=Configuration du mail (optionnelle)
+UserInputPanel.headline.operatingMode=Mode d'installation Jahia
+UserInputPanel.headline.serverType=Sélectionnez le serveur d'application cible
+UserInputPanel.headline.superUser=Configuration de l'administrateur (root)
