BACKLOG-1765 - German translation for new installer options (externalized config) http://jira.jahia.org/browse/BACKLOG-1765
German translation for externalization options

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@122 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
@@ -38,6 +38,10 @@ dbSettings.dbms.type.postgresql=PostgreSQL 8.x/9.x
 dbSettings.mode.embedded=Embedded Sun Java DB / Apache Derby Datenbank-Engine
 dbSettings.mode.standalone=Standalone DBMS
 dbSettings.title=Datenbankeinstellungen
+externalizedConfig.activate=Konfiguration externalisieren
+externalizedConfig.description=Jahia unterstützt externalisierte Konfiguration in den JAR-Dateien. Dies ist optional und standardmäßig deaktiviert. Die erzeugte JAR-Datei muss dann im Server-classpath vorhanden sein, also entweder im WEB-INF/lib Verzeichnis oder auf Server-Ebene konfiguriert.
+externalizedConfig.path=Konfiguration-Pfad
+externalizedConfig.title=Externalisierte Konfiguration (optional)
 installation.title=Installationstyp
 installation.type.advanced=Benutzerdefinierte Installation (fortgeschritten)
 installation.type.express=Schnellinstallation
