QA-2892 - Installer German translation missing for panel headers http://jira.jahia.org/browse/QA-2892
Added missing translations for German

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@127 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
@@ -5,6 +5,19 @@ PacksPanel.dependencyList=Das Paket hat folgende Abhängigkeiten und/oder Ausschl
 PacksPanel.info=Bitte wählen Sie hier den Installationstyp aus:
 PacksPanel.tip=Hinweis: Die grau markierten Pakete können nicht optional ausgewählt werden.
 PathInputPanel.noWhitespaces=Der Pfad darf keine Leerzeihen enthalten.
+UserInputPanel.headline.afterInstall=Installation
+UserInputPanel.headline.appServer=Webanwendung Konfiguration
+UserInputPanel.headline.cluster=Cluster-Konfiguration
+UserInputPanel.headline.dbMode=Datenbankeinstellungen
+UserInputPanel.headline.dbSettings=Datenbankeinstellungen
+UserInputPanel.headline.dbType=Datenbankeinstellungen
+UserInputPanel.headline.externalizedConfig=Externalisierte Konfiguration (optional)
+UserInputPanel.headline.installType=Installationstyp
+UserInputPanel.headline.ldap=LDAP Provider Konfiguration
+UserInputPanel.headline.mailSettings=Mail-Einstellungen (optional)
+UserInputPanel.headline.operatingMode=Jahia Betriebsart
+UserInputPanel.headline.serverType=Anwendungsserver
+UserInputPanel.headline.superUser=Administrator (root) Einstellungen
 dbSettings.connection.error=Ein Fehler ist aufgetretten beim Herstellen der Verbindung zur Datenbank
 installer.madewith=© 2002-2011 - Jahia Solutions Group SA
 installer.reversetitle=Jahia xCM Installation Wizard
