JCR DataStore option in the installer
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@142 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -28,20 +28,21 @@ dbSettings.connection.driver=Driver SGBD (*)
 dbSettings.connection.password=Mot de passe
 dbSettings.connection.url=URL SGBD (*)
 dbSettings.connection.username=Nom d'utilisateur
-dbSettings.dbms.createTables=Créer les tables dans la base ?
-dbSettings.dbms.storeFilesInDB=Stockage des binaires dans la base ?
+dbSettings.dbms.createTables=Créer les tables dans la base
+dbSettings.dbms.storeFilesInDB=Stockage des binaires dans la base
 dbSettings.dbms.title=Configuration SGBD
 dbSettings.dbms.type=Sélectionnez votre type de base
 dbSettings.dbms.type.derby=Sun Java DB / Apache Derby (standalone)
 dbSettings.dbms.type.mysql=MySQL 5.x
 dbSettings.dbms.type.postgresql=PostgreSQL 8.x/9.x
+dbSettings.dbms.useDataStore=Utilisez Data Store
 dbSettings.mode.embedded=Base embarquée Sun Java DB / Apache Derby
 dbSettings.mode.standalone=SGBD autonome
 dbSettings.title=Configuration SGBD
-externalizedConfig.title=Configuration externalisée
 externalizedConfig.activate=Externalisation activée
-externalizedConfig.path=Répertoire de stockage
 externalizedConfig.description=Jahia offre la possibilité de stocker la configuration dans un fichier JAR. Ceci est optionel et désactivé par défaut. Le JAR doit être positionné dans le classpath du serveur d'application, donc par exemple dans WEB-INF/lib de l'applicatif Jahia ou dans les options du serveur.
+externalizedConfig.path=Répertoire de stockage
+externalizedConfig.title=Configuration externalisée
 installation.title=Type d'installation
 installation.type.advanced=Installation personnalisée (avancée)
 installation.type.express=Installation rapide
