--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
@@ -28,13 +28,14 @@ dbSettings.connection.driver=Datenbank-Treiber (*)
 dbSettings.connection.password=Datenbank-Passwort
 dbSettings.connection.url=Datenbank-URL (*)
 dbSettings.connection.username=Datenbank-Benutzername
-dbSettings.dbms.createTables=Datenbank Tabellen erstellen?
-dbSettings.dbms.storeFilesInDB=Sollen die Binärdateien in der Datenbank gespeichert werden?
+dbSettings.dbms.createTables=Datenbank Tabellen erstellen
+dbSettings.dbms.storeFilesInDB=Binärdateien in der Datenbank speichern
 dbSettings.dbms.title=Datenbankeinstellungen
 dbSettings.dbms.type=Wählen Sie Ihren Datenbanktyp aus
 dbSettings.dbms.type.derby=Sun Java DB / Apache Derby (Standalone)
 dbSettings.dbms.type.mysql=MySQL 5.x
 dbSettings.dbms.type.postgresql=PostgreSQL 8.x/9.x
+dbSettings.dbms.useDataStore=Data Store verwenden
 dbSettings.mode.embedded=Embedded Sun Java DB / Apache Derby Datenbank-Engine
 dbSettings.mode.standalone=Standalone DBMS
 dbSettings.title=Datenbankeinstellungen
