--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
@@ -28,20 +28,21 @@ dbSettings.connection.driver=Database driver (*)
 dbSettings.connection.password=Database password
 dbSettings.connection.url=Database URL (*)
 dbSettings.connection.username=Database username
-dbSettings.dbms.createTables=Create required database tables?
-dbSettings.dbms.storeFilesInDB=Store binary data in the database?
+dbSettings.dbms.createTables=Create required database tables
+dbSettings.dbms.storeFilesInDB=Store binary data in the database
 dbSettings.dbms.title=Database connection settings
 dbSettings.dbms.type=Choose your DBMS type
 dbSettings.dbms.type.derby=Sun Java DB / Apache Derby (standalone)
 dbSettings.dbms.type.mysql=MySQL 5.x
 dbSettings.dbms.type.postgresql=PostgreSQL 8.x/9.x
+dbSettings.dbms.useDataStore=Use Data Store
 dbSettings.mode.embedded=Embedded Sun Java DB / Apache Derby database engine
 dbSettings.mode.standalone=Standalone DBMS
 dbSettings.title=Database connection settings
-externalizedConfig.title=Externalized configuration (optional)
 externalizedConfig.activate=Externalize configuration
-externalizedConfig.path=Configuration path
 externalizedConfig.description=Jahia supports externalized configurations stored in JAR files. This is optional and deactivated by default. The generated JAR file must then be in the server's classpath, so either in WEB-INF/lib or configured at the server level.
+externalizedConfig.path=Configuration path
+externalizedConfig.title=Externalized configuration (optional)
 installation.title=Installation type
 installation.type.advanced=Custom install (advanced)
 installation.type.express=Express install
