added checks for mysql ( BACKLOG-2119 )
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@230 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
@@ -6,6 +6,8 @@ PacksPanel.info=Choisissez le type d'installation que vous souhaitez mettre en o
 PacksPanel.tip=Note : les modules grisés ne sont pas optionnels.
 PathInputPanel.noWhitespaces=Les espaces ne sont pas autorisés dans le chemin d'installation
 dbSettings.connection.error=Une erreur s'est produite durant la tentative de connexion à la base
+dbSettings.connection.error.maxallowedpackets=Value for max_allowed_packet is not enough, should be at least 100M
+dbSettings.connection.error.lowercasetablenames=You must set lower_case_table_names to 1 with this version of mysql (>=5.5.9 and <=5.5.12)
 installer.madewith=© 2002-2012 - Jahia Solutions Group SA
 installer.reversetitle=Assistant d'installation de Jahia xCM
 jahia.cleanup=Nettoyage
