German translation for two new labels ( BACKLOG-2119 )
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@231 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
@@ -19,6 +19,8 @@ UserInputPanel.headline.operatingMode=Jahia Betriebsart
 UserInputPanel.headline.serverType=Anwendungsserver
 UserInputPanel.headline.superUser=Administrator (root) Einstellungen
 dbSettings.connection.error=Ein Fehler ist aufgetretten beim Herstellen der Verbindung zur Datenbank
+dbSettings.connection.error.lowercasetablenames=lower_case_table_names soll zu 1 gesetzt werden mit dieser Version von MySQL (>=5.5.9 and <=5.5.12)
+dbSettings.connection.error.maxallowedpackets=max_allowed_packet (MySQL-Server Konfiguration) ist zu niedrig. Der Wert soll mindestens 100M sein.
 installer.madewith=© 2002-2012 - Jahia Solutions Group SA
 installer.reversetitle=Jahia xCM Installation Wizard
 jahia.cleanup=Cleanup
