--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
@@ -7,7 +7,7 @@ PacksPanel.tip=Note: Grayed packs are required.
 PathInputPanel.noWhitespaces=Spaces are not allowed in the path.
 dbSettings.connection.error=An error occurred while establishing the connection to the database
 dbSettings.connection.error.maxallowedpackets=Value for max_allowed_packet is not enough, should be at least 100M
-dbSettings.connection.error.lowercasetablenames=You must set lower_case_table_names to 1 with this version of mysql (>=5.5.9 and <=5.5.12)
+dbSettings.connection.error.lowercasetablenames=You must set lower_case_table_names to 1 with this version of MySQL (>=5.5.9 and <=5.5.12)
 installer.madewith=© 2002-2012 - Jahia Solutions Group SA
 installer.reversetitle=Jahia xCM Installation Wizard
 jahia.cleanup=Cleanup
