BACKLOG-2823 - Backport changes from EE installer to the CE installer https://jira.jahia.org/browse/BACKLOG-2823
Introduce Jahia Vibes installer for Community Edition

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-6-6-X-X-BRANCH@336 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_es.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_es.properties
@@ -6,4 +6,4 @@ PacksPanel.info=Seleccione los paquetes que desea instalar:
 PacksPanel.tip=Nota: los paquetes en gris son obligatorios.
 PathInputPanel.noWhitespaces=No se permiten espacios en la ruta de instalación
 installer.madewith=© 2002-2012 - Jahia Solutions Group SA
-uninstaller.title=Desinstalación de Jahia xCM Community Edition
+uninstaller.title=Desinstalación de ${product.name} Community Edition
