--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
@@ -5,20 +5,13 @@ PacksPanel.dependencyList=Les modules selectionnés nécessitent également les sui
 PacksPanel.info=Choisissez le type d'installation que vous souhaitez mettre en oeuvre :
 PacksPanel.tip=Note : les modules grisés ne sont pas optionnels.
 PathInputPanel.noWhitespaces=Les espaces ne sont pas autorisés dans le chemin d'installation
-dbSettings.connection.error=Une erreur s'est produite durant la tentative de connexion à la base
-dbSettings.connection.error.maxallowedpackets=Value for max_allowed_packet is not enough, should be at least 100M
-dbSettings.connection.error.lowercasetablenames=You must set lower_case_table_names to 1 with this version of MySQL (>=5.5.9 and <=5.5.12)
-installer.madewith=© 2002-2012 - Jahia Solutions Group SA
-installer.reversetitle=Assistant d'installation de Jahia xCM
-jahia.cleanup=Nettoyage
-jahia.configuring=Configuration de Jahia en cours (ceci peut durer un certain temps):
-uninstaller.title=Désinstallation de Jahia xCM Community Edition
 UserInputPanel.headline.afterInstall=Installation
 UserInputPanel.headline.appServer=Application et paramètres du serveur
 UserInputPanel.headline.cluster=Configuration du cluster
 UserInputPanel.headline.dbMode=Configuration SGBD
-UserInputPanel.headline.dbType=Configuration SGBD
 UserInputPanel.headline.dbSettings=Configuration SGBD
+UserInputPanel.headline.dbType=Configuration SGBD
+UserInputPanel.headline.externalToolSettings=Outils de gestion de documents
 UserInputPanel.headline.externalizedConfig=Configuration externalisée (optionnelle)
 UserInputPanel.headline.installType=Type d'installation
 UserInputPanel.headline.ldap=Configuration LDAP
@@ -26,3 +19,12 @@ UserInputPanel.headline.mailSettings=Configuration du mail (optionnelle)
 UserInputPanel.headline.operatingMode=Mode d'installation Jahia
 UserInputPanel.headline.serverType=Sélectionnez le serveur d'application cible
 UserInputPanel.headline.superUser=Configuration de l'administrateur (root)
+dbSettings.connection.error=Une erreur s'est produite durant la tentative de connexion à la base
+dbSettings.connection.error.lowercasetablenames=You must set lower_case_table_names to 1 with this version of MySQL (>=5.5.9 and <=5.5.12)
+dbSettings.connection.error.maxallowedpackets=Value for max_allowed_packet is not enough, should be at least 100M
+eUserInputPanel.headline.externalToolSettings=Outils de gestion de documents
+installer.madewith=© 2002-2012 - Jahia Solutions Group SA
+installer.reversetitle=Assistant d'installation de ${product.name}
+jahia.cleanup=Nettoyage
+jahia.configuring=Configuration de Jahia en cours (ceci peut durer un certain temps):
+uninstaller.title=Désinstallation de ${product.name} Community Edition
