--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_pt.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_pt.properties
@@ -6,4 +6,4 @@ PacksPanel.info=Seleccione os pacotes que deseja instalar:
 PacksPanel.tip=Nota: Os pacotes a cinza são necessários.
 PathInputPanel.noWhitespaces=Não são permitidos espaços no caminho de instalação
 installer.madewith=© 2002-2012 - Jahia Solutions Group SA
-uninstaller.title=Desinstalação de Jahia xCM Community Edition
+uninstaller.title=Desinstalação de ${product.name} Community Edition
