--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_en.properties
@@ -1,8 +1,6 @@
 core=Jahia xCM + Jahia Composite Content Platform
 core.description=Jahia software suite (application-only package) including Jahia xCM, Jahia Composite Content Platform, our JahiApps and the Jahia Studio.
-docs=TODO: Jahia Documentation
-docs.description=Official Jahia Documentation and related information. Please note that the technical documentation and especially the JavaDoc documentation is frequently updated and improved. So we highly suggest to use the online versions in order to benefit from the latest versions of such documents.
-juch=TODO: Jahia Unified Content Hub
-juch.description=The Jahia United Content Hub package extends Jahia document management capabilities by allowing users to access external repositories such as Alfresco, Sharepoint and Oracle UCM.
 tomcat=Add Apache Tomcat - generate a complete installation folder
 tomcat.description=Uncheck this option to generate a standalone application package for Apache Tomcat. When this option is checked, you will have a complete installation folder (including Apache tomcat) and will be able to start your Jahia software suite instance right after the completion of this installation wizard.
+vibes=Vibes
+vibes.description=Vibes
