--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
@@ -38,6 +38,7 @@ dbSettings.dbms.type.postgresql=PostgreSQL 8.x/9.x
 dbSettings.mode.embedded=Embedded Sun Java DB / Apache Derby Datenbank-Engine
 dbSettings.mode.standalone=Standalone DBMS
 dbSettings.title=Datenbankeinstellungen
+externalToolSettings.title=Dokumenten-Management-Tools
 externalizedConfig.activate=Konfiguration externalisieren
 externalizedConfig.description=Jahia unterstützt externalisierte Konfiguration in den JAR-Dateien. Dies ist optional und standardmäßig deaktiviert. Die erzeugte JAR-Datei muss dann im Server-classpath vorhanden sein, also entweder im WEB-INF/lib Verzeichnis oder auf Server-Ebene konfiguriert.
 externalizedConfig.path=Konfiguration-Pfad
