--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -38,6 +38,7 @@ dbSettings.dbms.type.postgresql=PostgreSQL 8.x/9.x
 dbSettings.mode.embedded=Base embarquée Sun Java DB / Apache Derby
 dbSettings.mode.standalone=SGBD autonome
 dbSettings.title=Configuration SGBD
+externalToolSettings.title=Outils de gestion de documents
 externalizedConfig.activate=Externalisation activée
 externalizedConfig.description=Jahia offre la possibilité de stocker la configuration dans un fichier JAR. Ceci est optionel et désactivé par défaut. Le JAR doit être positionné dans le classpath du serveur d'application, donc par exemple dans WEB-INF/lib de l'applicatif Jahia ou dans les options du serveur.
 externalizedConfig.path=Répertoire de stockage
