--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
@@ -11,6 +11,7 @@ UserInputPanel.headline.cluster=Cluster-Konfiguration
 UserInputPanel.headline.dbMode=Datenbankeinstellungen
 UserInputPanel.headline.dbSettings=Datenbankeinstellungen
 UserInputPanel.headline.dbType=Datenbankeinstellungen
+UserInputPanel.headline.externalToolSettings=Dokumenten-Management-Tools
 UserInputPanel.headline.externalizedConfig=Externalisierte Konfiguration (optional)
 UserInputPanel.headline.installType=Installationstyp
 UserInputPanel.headline.ldap=LDAP Provider Konfiguration
@@ -21,8 +22,9 @@ UserInputPanel.headline.superUser=Administrator (root) Einstellungen
 dbSettings.connection.error=Ein Fehler ist aufgetretten beim Herstellen der Verbindung zur Datenbank
 dbSettings.connection.error.lowercasetablenames=lower_case_table_names soll zu 1 gesetzt werden mit dieser Version von MySQL (>=5.5.9 and <=5.5.12)
 dbSettings.connection.error.maxallowedpackets=max_allowed_packet (MySQL-Server Konfiguration) ist zu niedrig. Der Wert soll mindestens 100M sein.
+eUserInputPanel.headline.externalToolSettings=Dokumenten-Management-Tools
 installer.madewith=© 2002-2012 - Jahia Solutions Group SA
-installer.reversetitle=Jahia xCM Installation Wizard
+installer.reversetitle=${product.name} Installation Wizard
 jahia.cleanup=Cleanup
 jahia.configuring=Konfigurieren Jahia (kann einige Minuten dauern)
-uninstaller.title=Deinstallation von Jahia xCM Community Edition
+uninstaller.title=Deinstallation von ${product.name} Community Edition
