--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
@@ -5,20 +5,13 @@ PacksPanel.dependencyList=The selected package has the following dependencies an
 PacksPanel.info=Select the installation type you want to perform:
 PacksPanel.tip=Note: Grayed packs are required.
 PathInputPanel.noWhitespaces=Spaces are not allowed in the path.
-dbSettings.connection.error=An error occurred while establishing the connection to the database
-dbSettings.connection.error.maxallowedpackets=Value for max_allowed_packet is not enough, should be at least 100M
-dbSettings.connection.error.lowercasetablenames=You must set lower_case_table_names to 1 with this version of MySQL (>=5.5.9 and <=5.5.12)
-installer.madewith=© 2002-2012 - Jahia Solutions Group SA
-installer.reversetitle=Jahia xCM Installation Wizard
-jahia.cleanup=Cleanup
-jahia.configuring=Configuring Jahia (this can take some time):
-uninstaller.title=Uninstallation of Jahia xCM Community Edition
 UserInputPanel.headline.afterInstall=Installation
 UserInputPanel.headline.appServer=Application and server settings
 UserInputPanel.headline.cluster=Cluster configuration
 UserInputPanel.headline.dbMode=Database connection settings
-UserInputPanel.headline.dbType=Database connection settings
 UserInputPanel.headline.dbSettings=Database connection settings
+UserInputPanel.headline.dbType=Database connection settings
+UserInputPanel.headline.externalToolSettings=Document Management Tools
 UserInputPanel.headline.externalizedConfig=Externalized configuration (optional)
 UserInputPanel.headline.installType=Installation type
 UserInputPanel.headline.ldap=LDAP provider configuration
@@ -26,3 +19,12 @@ UserInputPanel.headline.mailSettings=Mail settings (optional)
 UserInputPanel.headline.operatingMode=Jahia operating mode
 UserInputPanel.headline.serverType=Server type
 UserInputPanel.headline.superUser=System administrator (root) settings
+dbSettings.connection.error=An error occurred while establishing the connection to the database
+dbSettings.connection.error.lowercasetablenames=You must set lower_case_table_names to 1 with this version of MySQL (>=5.5.9 and <=5.5.12)
+dbSettings.connection.error.maxallowedpackets=Value for max_allowed_packet is not enough, should be at least 100M
+eUserInputPanel.headline.externalToolSettings=Document Management Tools
+installer.madewith=© 2002-2012 - Jahia Solutions Group SA
+installer.reversetitle=${product.name} Installation Wizard
+jahia.cleanup=Cleanup
+jahia.configuring=Configuring Jahia (this can take some time):
+uninstaller.title=Uninstallation of ${product.name} Community Edition
