--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
@@ -41,7 +41,7 @@ dbSettings.title=Database connection settings
 dmConfig.description=Document Management experience can be smoother if you have those external tools installed.
 dmConfig.ffmpeg.description=Select the ffmpeg executable file
 dmConfig.ffmpeg.notInstalled=ffmpeg is not installed at the given location
-dmConfig.imagemagick.description=Select the base path for your ImageMagick install.
+dmConfig.imagemagick.description=Select the base path for your ImageMagick install
 dmConfig.imagemagick.notInstalled=ImageMagick is not installed (correctly) at the given location. You have to select the base path of ImageMagick.
 dmConfig.office.description=Select the home path for your LibreOffice or OpenOffice install
 dmConfig.office.notInstalled=LibreOffice or OpenOffice is not installed (correctly) at the given location. You have to select the home path of LibreOffice/OpenOffice.
