Replace mention to "Vibes" with "Wise"
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-6-6-X-X-BRANCH@376 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_de.properties
@@ -2,5 +2,5 @@ core=Jahia xCM + Jahia Composite Content Platform
 core.description=Jahia Software Suite (nur Anwendungspaket) einschließlich Jahia xCM, Jahia Composite Content Platform, unsere JahiApps und Jahia Studio.
 tomcat=Apache Tomcat - komplettes Installationsverzeichnis erzeugen
 tomcat.description=Deaktivieren Sie diese Option, um ein eigenständiges Anwendungspaket für den Apache Tomcat zu erzeugen. Wenn diese Option aktiviert ist, wird eine vollständige Installation gemacht (Apache Tomcat wird auch mitinstalliert). Ihre persönliche Jahia Software-Suite kann direkt nach der Fertigstellung dieses Installationsassistenten gestartet werden.
-vibes=Vibes
-vibes.description=Vibes
+wise=Jahia Wise
+wise.description=Jahia Wise
