--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -1,6 +1,6 @@
 afterInstall.description=Installation réussie
 afterInstall.launchJahia=Lancer un navigateur après le démarrage de Jahia
-afterInstall.startTomcat=Démarrer le seveur Jahia
+afterInstall.startTomcat=Démarrer le serveur Jahia
 afterInstall.title=Installation
 afterInstall.viewHowToInstall=Ouvrez le fichier d'aide à l'installation
 appServer.ajpPort=port de connexion AJP (*)
