--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_en.properties
@@ -1,4 +1,6 @@
 core=Jahia xCM + Jahia Composite Content Platform
 core.description=Jahia software suite (application-only package) including Jahia xCM, Jahia Composite Content Platform, our JahiApps and the Jahia Studio.
+drivers=JDBC Driver
+shared=Shared libraries
 tomcat=Add Apache Tomcat - generate a complete installation folder
 tomcat.description=Uncheck this option to generate a standalone application package for Apache Tomcat. When this option is checked, you will have a complete installation folder (including Apache tomcat) and will be able to start your Jahia software suite instance right after the completion of this installation wizard.
