QA-5329 - Typing error in German text in installer https://jira.jahia.org/browse/QA-5329
Typo corrected: Pflichtenfeld -> Pflichtfeld

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@861 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
@@ -11,7 +11,7 @@ appServer.developmentMode=Entwicklungsmodus für die Vorlagen aktiviern?
 appServer.httpPort=HTTP Connector Port (*)
 appServer.httpPort.validator=HTTP Connector Port ist ein Pflichtfeld und sollte eine gültige TCP Port-Nummer enthalten
 appServer.password=Jahia Tool-Manager Passwort (*)
-appServer.password.mandatory=Jahia Tool-Manager Passwort ist ein Pflichtenfeld
+appServer.password.mandatory=Jahia Tool-Manager Passwort ist ein Pflichtfeld
 appServer.serverPort=Server Shutdown Port (*)
 appServer.serverPort.validator=Server Shutdown Port ist ein Pflichtfeld und sollte eine gültige TCP Port-Nummer enthalten
 appServer.sslPort=HTTPS Redirect Port (*)
@@ -19,10 +19,10 @@ appServer.sslPort.validator=HTTPS Redirect Port ist ein Pflichtfeld und sollte e
 appServer.title=Webanwendung Konfiguration
 appServer.tomcat.description=Apache Tomcat Konfiguration
 appServer.username=Jahia Tool-Manager Benutzername (*)
-appServer.username.mandatory=Jahia Tool-Manager Benutzername ist ein Pflichtenfeld
+appServer.username.mandatory=Jahia Tool-Manager Benutzername ist ein Pflichtfeld
 appServer.webApp.description=Webanwendung Konfiguration
-common.requiredField=Pflichtenfeld
-common.requiredFieldHint=(*) - dies ist ein Pflichtenfeld
+common.requiredField=Pflichtfeld
+common.requiredFieldHint=(*) - dies ist ein Pflichtfeld
 dbSettings.chooseMode=Wählen Sie bitte Ihren bevorzugten Datenbank-Modus aus
 dbSettings.connection.driver=Datenbank-Treiber (*)
 dbSettings.connection.password=Datenbank-Passwort
@@ -59,7 +59,7 @@ superUser.email=E-Mail
 superUser.firstname=Vorname
 superUser.lastname=Nachname
 superUser.password=Passwort (*)
-superUser.password.mandatory=Passwort ist ein Pflichtenfeld
+superUser.password.mandatory=Passwort ist ein Pflichtfeld
 superUser.password.match=Beide Passwörter müssen übereinstimmen
 superUser.passwordConfirm=Passwort-Bestätigung (*)
 superUser.title=Administrator (root) Einstellungen
