--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
@@ -49,7 +49,7 @@ installation.type.express=Schnellinstallation
 installation.type1=Hier können Sie Ihre bevorzugte Art der Installation wählen.
 installation.type2=Schnellinstallation führt das übliche Jahia Setup mit dem Apache Tomcat 7.0 Server und der Embedded Sun Java DB / Apache Derby Datenbank aus, während die benutzerdefinierte Installation die erweiterte Konfiguration des Anwendungsservers, der Datenbank und zusätzlichen Optionen ermöglicht:
 mailSettings.administrator=Mail-Administrator (Empfänger)
-mailSettings.description=Die unten angegebenen Einstellungen sind optional. Lassen Sie bitte sie leer um E-Mail Benachrichtigungen zu unterdrücken. Eine Eingabe dieser Einstellungen wird den E-Mail Benachrichtigungsdienst aktivieren
+mailSettings.description=Die unten angegebenen Einstellungen sind optional. Lassen Sie diese Felder leer um E-Mail Benachrichtigungen zu unterdrücken. Eine Eingabe dieser Einstellungen wird den E-Mail Benachrichtigungsdienst aktivieren
 mailSettings.from=E-Mail von (Absender)
 mailSettings.server=Mail-Server
 mailSettings.title=Mail-Einstellungen (optional)
