QA-5344 - INSTALLATION: Default language not kept in Jahia https://jira.jahia.org/browse/QA-5344
Allow specifying the root user preferred language during installation.
In "Express" installation mode use the selected installer language as the root's preferred one.

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@863 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
@@ -72,6 +72,7 @@ superUser.password=Password (*)
 superUser.password.mandatory=Password is a mandatory field
 superUser.password.match=Both passwords must match
 superUser.passwordConfirm=Password confirmation (*)
+superUser.preferredLang=Preferred language
 superUser.title=System administrator (root) settings
 superUser.username=Username: root
 superUser.username.mandatory=Username is a mandatory field.
