--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -62,6 +62,7 @@ superUser.password=Mot de passe (*)
 superUser.password.mandatory=Un mot de passe est obligatoire
 superUser.password.match=Les deux mots de passe doivent être identiques
 superUser.passwordConfirm=Confirmation du mot de passe (*)
+superUser.preferredLang=Langue de préférence
 superUser.title=Configuration de l'admin (root)
 superUser.username=Nom d'utilisateur: root
 superUser.username.mandatory=Le nom d'utilisateur est obligatoire.
