QA-4983 - Allow configuring Studio tools (Maven and SCM) via installer
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@864 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
@@ -17,6 +17,7 @@ UserInputPanel.headline.ldap=LDAP provider configuration
 UserInputPanel.headline.mailSettings=Mail settings (optional)
 UserInputPanel.headline.operatingMode=Jahia operating mode
 UserInputPanel.headline.serverType=Server type
+UserInputPanel.headline.studioToolSettings=Studio Tools
 UserInputPanel.headline.superUser=System administrator (root) settings
 dbSettings.connection.error=An error occurred while establishing the connection to the database
 dbSettings.connection.error.lowercasetablenames=You must set lower_case_table_names to 1 with this version of MySQL (>=5.5.9 and <=5.5.12)
