--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
@@ -65,6 +65,10 @@ mailSettings.server=Mail server
 mailSettings.title=Mail settings (optional)
 server.title=Server type
 server.type=Choose target application server type
+studioToolSettings.description=For working with modules in Jahia Studio the following build and SCM tools are useful. You can leave the fields empty if the paths to those executables are already in your PATH environment variable.
+studioToolSettings.git.description=Provide the path for your Git executable (git)
+studioToolSettings.mvn.description=Provide the path for your Maven executable (mvn)
+studioToolSettings.svn.description=Provide the path for your Subversion executable (svn)
 superUser.email=E-mail
 superUser.firstname=First name
 superUser.lastname=Last name
