--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
@@ -17,6 +17,7 @@ UserInputPanel.headline.ldap=LDAP Provider Konfiguration
 UserInputPanel.headline.mailSettings=Mail-Einstellungen (optional)
 UserInputPanel.headline.operatingMode=Jahia Betriebsart
 UserInputPanel.headline.serverType=Anwendungsserver
+UserInputPanel.headline.studioToolSettings=Studio-Tools
 UserInputPanel.headline.superUser=Administrator (root) Einstellungen
 dbSettings.connection.error=Ein Fehler ist aufgetretten beim Herstellen der Verbindung zur Datenbank
 dbSettings.connection.error.lowercasetablenames=lower_case_table_names soll zu 1 gesetzt werden mit dieser Version von MySQL (>=5.5.9 and <=5.5.12)
