QA-5313 - Let the default language be configured through the Jahia installer https://jira.jahia.org/browse/QA-5313
Added new screen into the installer to configure default language (org.jahia.multilang.default_language_code), use existing license instead of a trial and deploy custom modules.

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@866 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
@@ -5,6 +5,7 @@ PacksPanel.dependencyList=Das Paket hat folgende Abhängigkeiten und/oder Ausschl
 PacksPanel.info=Bitte wählen Sie hier den Installationstyp aus:
 PacksPanel.tip=Hinweis: Die grau markierten Pakete können nicht optional ausgewählt werden.
 PathInputPanel.noWhitespaces=Der Pfad darf keine Leerzeihen enthalten.
+UserInputPanel.headline.additionalSettings=Weitere Einstellungen
 UserInputPanel.headline.afterInstall=Installation
 UserInputPanel.headline.appServer=Webanwendung Konfiguration
 UserInputPanel.headline.dbMode=Datenbankeinstellungen
