--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
@@ -5,6 +5,7 @@ PacksPanel.dependencyList=Les modules selectionnés nécessitent également les sui
 PacksPanel.info=Choisissez le type d'installation que vous souhaitez mettre en oeuvre :
 PacksPanel.tip=Note : les modules grisés ne sont pas optionnels.
 PathInputPanel.noWhitespaces=Les espaces ne sont pas autorisés dans le chemin d'installation
+UserInputPanel.headline.additionalSettings=Paramètres supplémentaires
 UserInputPanel.headline.afterInstall=Installation
 UserInputPanel.headline.appServer=Application et paramètres du serveur
 UserInputPanel.headline.dbMode=Configuration SGBD
