--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
@@ -5,6 +5,7 @@ PacksPanel.dependencyList=The selected package has the following dependencies an
 PacksPanel.info=Select the installation type you want to perform:
 PacksPanel.tip=Note: Grayed packs are required.
 PathInputPanel.noWhitespaces=Spaces are not allowed in the path.
+UserInputPanel.headline.additionalSettings=Additional settings
 UserInputPanel.headline.afterInstall=Installation
 UserInputPanel.headline.appServer=Application and server settings
 UserInputPanel.headline.dbMode=Database connection settings
