--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
@@ -1,3 +1,6 @@
+additionalSettings.defaultLanguageCode=Choose default language, which will be used as a fallback in a resolution chain or in some cases for search term analysing and stemming.
+additionalSettings.licensePath=You can specify the existing license file to be used
+additionalSettings.modulesPath=Path to a folder with additional modules to be deployed
 afterInstall.description=Installation successful
 afterInstall.launchJahia=Launch a Web browser when the server is started
 afterInstall.startTomcat=Start Jahia server
